--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.3",
-    "ts-node-dev": "^2.0.0",
+    "nodemon": "^3.1.7",
     "typescript": "^5.7.2"
   }
 }
