--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.3",
+    "@types/pg": "^8.11.10",
     "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src --exec npx ts-node src/server.ts",
+    "build": "tsc"
   }
 }
