--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
@@ -20,6 +21,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/knex": "^0.16.1",
     "@types/node": "^22.9.3",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
@@ -31,6 +33,9 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --watch src --exec npx ts-node src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate:make": "knex migrate:make --knexfile knexfile.ts --cwd ./ --env development",
+    "migrate:latest": "knex migrate:latest --knexfile knexfile.ts --cwd ./ --env development",
+    "migrate:rollback": "knex migrate:rollback --knexfile knexfile.ts --cwd ./ --env development"
   }
 }
