--- a/.env.local
+++ b/.env.local
@@ -12,5 +12,5 @@ API_URL=http://localhost:5000
 INVITATION_SECRET_KEY=default_invitaion_secret
 SMTP_HOST=smtp.ethereal.email
 SMTP_PORT=587
-SMTP_USER=roberta.breitenberg86@ethereal.email
-SMTP_PASS=s3T8sKH1JRGPtuKCW5
+SMTP_USER=elena.oreilly39@ethereal.email
+SMTP_PASS=qHfTt5KQ1GAY4W2s2c
