--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,5 +48,17 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  nginx:
+    build:
+      context: ../nginx
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+    volumes:
+      - ../nginx/default.conf:/etc/nginx/conf.d/default.conf:ro 
+    depends_on:
+      - frontend
+      - backend
+
 volumes:
   postgres_data:
